// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddUser: Component should render correctly 1`] = `
<styled.div>
  <TopHeader
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Invite Users"
        id="project.addUser.headerSubtitle"
        values={Object {}}
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Users"
        id="project.addUser.headerTitle"
        values={Object {}}
      />
    }
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Invite Users"
        id="project.addUser.headerSubtitle"
        values={Object {}}
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Users"
        id="project.addUser.headerTitle"
        values={Object {}}
      />
    }
  />
  <NavigationContainer
    hideOnDesktop={false}
    right={false}
  >
    <BackButton
      disabled={false}
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Back"
        id="project.addUser.back"
        values={Object {}}
      />
    </BackButton>
  </NavigationContainer>
  <Styled(Modal)
    contentLabel="Confirm Removal"
    isOpen={false}
    style={
      Object {
        "content": Object {
          "WebkitOverflowScrolling": "touch",
          "alignItems": "center",
          "border": null,
          "borderRadius": "4px",
          "boxShadow": "0 4px 8px 0 rgba(0, 0, 0, 0.5)",
          "display": "flex",
          "flexDirection": "column",
          "left": "50%",
          "maxWidth": "600px",
          "outline": "none",
          "overflow": "auto",
          "position": "absolute",
          "right": "10px",
          "top": "50%",
          "transform": "translate(-50%, -50%)",
          "width": "calc(100% - 20px)",
        },
        "overlay": Object {
          "backgroundColor": "rgba(29, 29, 32, 0.75)",
          "bottom": 0,
          "left": 0,
          "position": "fixed",
          "right": 0,
          "top": 0,
          "zIndex": 10000,
        },
      }
    }
  >
    <Styled(H1)>
      <FormattedMessage
        defaultMessage="Are you sure you want to remove the user from the project?"
        id="project.addUser.removeTitle"
        values={Object {}}
      />
    </Styled(H1)>
    <styled.div>
      <BackButton
        disabled={false}
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Cancel"
          id="project.addUser.cancelRemoval"
          values={Object {}}
        />
      </BackButton>
      <NextButton
        loading={false}
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Confirm"
          id="project.addUser.confirmRemoval"
          values={Object {}}
        />
      </NextButton>
    </styled.div>
  </Styled(Modal)>
</styled.div>
`;

exports[`AddUser: Component should render correctly with users 1`] = `
<styled.div>
  <TopHeader
    headerSubtitle={
      <FormattedMessage
        defaultMessage="Invite Users"
        id="project.addUser.headerSubtitle"
        values={Object {}}
      />
    }
    headerTitle={
      <FormattedMessage
        defaultMessage="Users"
        id="project.addUser.headerTitle"
        values={Object {}}
      />
    }
  />
  <ContextHeader
    subtitle={
      <FormattedMessage
        defaultMessage="Invite Users"
        id="project.addUser.headerSubtitle"
        values={Object {}}
      />
    }
    title={
      <FormattedMessage
        defaultMessage="Users"
        id="project.addUser.headerTitle"
        values={Object {}}
      />
    }
  />
  <styled.div
    key="0"
  >
    <styled.div>
      <Styled(H2)>
        Alan Watts
      </Styled(H2)>
      <Styled(H3) />
    </styled.div>
    <styled.div>
      <Styled(Component)
        id="removeUserPlusButton0"
        onClick={[Function]}
      >
        <styled.div />
      </Styled(Component)>
    </styled.div>
  </styled.div>
  <styled.div
    key="1"
  >
    <styled.div>
      <Styled(H2)>
        Dale Chihuly
      </Styled(H2)>
      <Styled(H3)>
        loremipsumdolorsitametconsecteturadipiscinglitdonecobortis@nisitnullalobortisiaculis.com
      </Styled(H3)>
    </styled.div>
    <styled.div>
      <Styled(Component)
        id="addUserPlusButton1"
        onClick={[Function]}
      >
        <styled.div />
      </Styled(Component)>
    </styled.div>
  </styled.div>
  <styled.div
    key="2"
  >
    <styled.div>
      <Styled(H2)>
        Dave Bowie
      </Styled(H2)>
      <Styled(H3) />
    </styled.div>
    <styled.div>
      <Styled(Component)
        id="addUserPlusButton2"
        onClick={[Function]}
      >
        <styled.div />
      </Styled(Component)>
    </styled.div>
  </styled.div>
  <styled.div
    key="3"
  >
    <styled.div>
      <Styled(H2)>
        Pellentesque a massa at purus cursus egestas. Aliquam ut vehicula. Praesent est erat, laoreet et ornare ullamcorper, finibus id nisl. Etiam tempor, ligula a sagittis
      </Styled(H2)>
      <Styled(H3)>
        loremipsumdolorsitametconsecteturadipiscinglitdonecobortis@nisitnullalobortisiaculis.com
      </Styled(H3)>
    </styled.div>
    <styled.div>
      <Styled(Component)
        id="addUserPlusButton3"
        onClick={[Function]}
      >
        <styled.div />
      </Styled(Component)>
    </styled.div>
  </styled.div>
  <NavigationContainer
    hideOnDesktop={false}
    right={false}
  >
    <BackButton
      disabled={false}
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Back"
        id="project.addUser.back"
        values={Object {}}
      />
    </BackButton>
  </NavigationContainer>
  <Styled(Modal)
    contentLabel="Confirm Removal"
    isOpen={false}
    style={
      Object {
        "content": Object {
          "WebkitOverflowScrolling": "touch",
          "alignItems": "center",
          "border": null,
          "borderRadius": "4px",
          "boxShadow": "0 4px 8px 0 rgba(0, 0, 0, 0.5)",
          "display": "flex",
          "flexDirection": "column",
          "left": "50%",
          "maxWidth": "600px",
          "outline": "none",
          "overflow": "auto",
          "position": "absolute",
          "right": "10px",
          "top": "50%",
          "transform": "translate(-50%, -50%)",
          "width": "calc(100% - 20px)",
        },
        "overlay": Object {
          "backgroundColor": "rgba(29, 29, 32, 0.75)",
          "bottom": 0,
          "left": 0,
          "position": "fixed",
          "right": 0,
          "top": 0,
          "zIndex": 10000,
        },
      }
    }
  >
    <Styled(H1)>
      <FormattedMessage
        defaultMessage="Are you sure you want to remove the user from the project?"
        id="project.addUser.removeTitle"
        values={Object {}}
      />
    </Styled(H1)>
    <styled.div>
      <BackButton
        disabled={false}
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Cancel"
          id="project.addUser.cancelRemoval"
          values={Object {}}
        />
      </BackButton>
      <NextButton
        loading={false}
        onClick={[Function]}
      >
        <FormattedMessage
          defaultMessage="Confirm"
          id="project.addUser.confirmRemoval"
          values={Object {}}
        />
      </NextButton>
    </styled.div>
  </Styled(Modal)>
</styled.div>
`;
